[project]
name = "nts-radio-cli"
version = "0.2.0"
description = "CLI tool to check what's playing on NTS Radio"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rich-pixels>=1.1.1",
    "pillow>=10.0.0",
]
authors = [{ name = "Tuk Bredsdorff", email = "tukodeb@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[project.scripts]
nts-radio = "nts.cli:cli"

[project.urls]
Source = "https://github.com/tiktuk/nts-radio-cli"
Issues = "https://github.com/tiktuk/nts-radio-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nts"]

[tool.ruff]
select = ["RUF007"]
quote_style = "double"
